--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -1,26 +1,25 @@
 name: Hello world workflow
 
 on:
- push:
-   branches:
-	-main:
- pull_request:
-   branches:
-	-main:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
- 
+
 jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      -uses: actions/checkout@v2
-      -name: hello world
-	run: echo "Hello world"
-	shell: bash
+      - uses: actions/checkout@v2
+      - name: hello world
+        run: echo "Hello world"
+        shell: bash
   goodbye:
     runs-on: ubuntu-latest
     steps:
-      -name: goodbye world
-       run: echo "Goodbye world"
-       shell: bash
-
+      - name: goodbye world
+        run: echo "Goodbye world"
+        shell: bash
