--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -1,24 +1,40 @@
 name: Create a comment on a new issue
 
 on:
- issues:
-   types: [opened]
+  issues:
+    types: [opened]
     
 jobs:
-    
-   comment-with-api:
-     runs-on: ubuntu-latest
-     steps:
+  comment-with-action:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Dump github context"
+        run: echo '${{ toJSON(github.event) }}' | jq
+        shell: bash
+      - name: Create comment
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            This is a multi-line test comment
+            - With GitHub **Markdown** :sparkles:
+            - Created by [create-or-update-comment][1]
+  
+            [1]: https://github.com/peter-evans/create-or-update-comment
+          reactions: '+1'
+   
+  comment-with-api:
+    runs-on: ubuntu-latest
+    steps:
       - name: "Create comment with API"
         run: |
-         gh api -X POST \
-         HTTP://api.github.com/repo/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
-         -f body='
-            Comment from API call, not actions
-         '
-     env:
-      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      ORGANIZATION: ${{github.event.organization.login}}
-      REPOSITORY: ${{github.event.repository.name}}
-      ISSUE_NUMBER: ${{github.event.issue.number}}
-    
+          gh api -X POST \
+          HTTP://api.github.com/repo/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+          -f body='
+             Comment from API call, not actions
+          '
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          ORGANIZATION: ${{github.event.organization.login}}
+          REPOSITORY: ${{github.event.repository.name}}
+          ISSUE_NUMBER: ${{github.event.issue.number}}
